--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,7 +26,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
 
+    - name: Create custom .pylintrc file
+      run: |
+        echo "[MESSAGES CONTROL]" > .pylintrc
+        echo "disable = C0303, C0301" >> .pylintrc
+        echo "" >> .pylintrc
+        echo "[FORMAT]" >> .pylintrc
+        echo "max-line-length = 120" >> .pylintrc
+
     - name: Run Pylint on python_code/
       run: |
         echo "Running Pylint on python_code/ folder..."
-        pylint python_code/*.py
+        pylint --rcfile=.pylintrc python_code/*.py
